welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.code
def indexOfMaxValue(nums:Array[Int]):Int = {
	var max = 0
	var pos = 0
	for(i<-0 to nums.length-1){
		if(nums(i)>max){
			max=nums(i)
			pos=i
		}

		
	}
	return i
}
